# calculator-cli-py

./: .gitignore  README.md  pyproject.toml
src/calculator/: cli.py  exit_codes.py  operations.py
src/calculator_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cli.py  test_operations.py
