[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-cli"
version = "0.1.0"
description = "A CLI calculator built with Click"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
calc = "calculator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]